2002-11-07  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: (SetDefaultUserPrefs): Add /var/log/sys.log to 
	list of possible logs to open. Apply duct tape to bug that
	I don't have time to look at.

2002-10-17  Kjartan Maraas  <kmaraas@gnome.org>

	* about.c: Fix a leak. Merge from stable.
	
2002-10-15  Irene Ryan <irene.ryan@sun.com>

	* help/C/gnome-system-log.xml: updated to fix bug #91164
	* help/C/gnome-system-log-C.omf: updated manual date
	  and version number
	* help/C/l10n.txt: new text containing instruction for
	  the L10N team about how to take the screenshots for
	  the manual
	* help/C/figures/syslog_window.png: updated screenshot
	  of the latest application
	      
2002-09-26  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* monitor.c: Set remove list in the Monitor Options window to
	remember the logs it is monitoring. Fixes bug# 89485.

2002-09-25  Deepa Natarajan <deepa.natarajan@wipro.com>

	* logview.c: Add an option to collapse all the trees.
	Fixes bug# 89482.

2002-09-06  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Remove conflict for menu accelerators. Also get
	rid of silly stock icons in File menu that don't make sense. Fixes
	#92540.

2002-08-29 John Fleck <jfleck@inkstain.net>

	* about.c: fixing #92056 to remove 'Linux' only references.

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-security.in: Default session to true, so that
	user can run it when console helper is enabled. Another fix from
	Frederic.

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* actions.c: (apply_actions): Fix another case of 'logview'. [sigh]

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-security.in: Point to gnome-system-log instead
	of logview. Thanks to Frederic for pointing this out.

2002-08-09  Glynn Foster  <glynn.foster@sun.com>

        * gnome-system-log.1: Update man page.

2002-08-02  Deepa Natarajan  <deepa.natarajan@wipro.com>
