@@ -2,8 +2,8 @@
 
   <schemalist>
       <schema>
-      <key>/schemas/apps/logview/logfile</key>
-      <applyto>/apps/logview/logfile</applyto>
+      <key>/schemas/apps/gnome-system-log/logfile</key>
+      <applyto>/apps/gnome-system-log/logfile</applyto>
       <owner>logview</owner>
       <type>string</type>
       <default></default>
