@@ -1,3 +1,9 @@
+2002-11-20  Glynn Foster  <glynn.foster@sun.com>
+
+	* log_repaint.c: (InitPages), logrtns.c: Crufty code - 
+	make it less crufty. Fixes #99047.
+	* logview.schemas.in: Dunno why I called it 'logview'. Oh well.
+
 2002-11-07  Glynn Foster  <glynn.foster@sun.com>
 
 	* logview.c: (SetDefaultUserPrefs): Add /var/log/sys.log to 
